WIP /workflow endpoints 2
