# src/pkg/domain/model/pdfTemplate.go
@@ -1,0 +1,6 @@
+package domain
+
+type PdfTemplate struct {
+	TemplateName string
+	Placeholders []string
+}
