# src/pkg/domain/model/workflow.go
@@ -1,0 +1,7 @@
+package domain
+
+type Workflow struct {
+	Name              string
+	EmailTemplateName string
+	PDFTemplateNames  string
+}
