# src/pkg/domain/model/workflowSendRequest.go
@@ -1,15 +1,0 @@
-package domain
-
-type WorkflowSendRequest struct {
-	toEmail           string
-	toName            string
-	StaticAttachments []struct {
-		Content  string
-		FileName string
-	}
-	TemplatedPDFs []struct {
-		TemplateName   string
-		TemplateString string
-	}
-	EmailSubject string
-}
